[project]
name = "nonebot-plugin-onebot-luckperms"
version = "0.1.0"
description = "LuckPerms-style permission system for NoneBot2 + OneBot"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "nonebot2>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "pydantic>=2.13.4",
    "aiohttp>=3.14.1",
    "pyyaml>=6.0",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
redis = ["redis>=8.0"]
test = ["pytest>=9.0"]
all = ["nonebot-plugin-onebot-luckperms[redis]", "nonebot-plugin-onebot-luckperms[test]"]

[project.urls]
Homepage = "https://github.com/XChen446/nonebot-plugin-onebot-luckperms"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nonebot_plugin_onebot_luckperms*"]

[tool.setuptools.package-data]
nonebot_plugin_onebot_luckperms = ["py.typed"]

[tool.nonebot]
plugins = ["nonebot_plugin_onebot_luckperms"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
